--- a/site/resources/styles/core/form-layout-top.less
+++ b/site/resources/styles/core/form-layout-top.less
@@ -39,6 +39,15 @@
     margin-bottom: @small_spacing;
   }
 
+  select,
+  input
+  {
+    + label
+    {
+      margin-left: @small_spacing;
+    }
+  }
+
   .help
   {
     float: right;
