--- a/site/resources/styles/themes/ice.css
+++ b/site/resources/styles/themes/ice.css
@@ -249,23 +249,23 @@ div.info-box-top {
 .quote-block {
   color: #7a7a7a;
 }
-ul.menu {
+.menu {
   background-color: #f8f8f8;
   border-color: #8aabca;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #f0f0f0;
   border-color: #8aabca;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #ffffff;
   border-color: #8aabca;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #666666;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #666666;
 }
 .button,
