--- a/site/resources/styles/themes/theme-base.less
+++ b/site/resources/styles/themes/theme-base.less
@@ -236,7 +236,7 @@ p, div
   color: @dimmer_text_color;
 }
 
-ul.menu
+.menu
 {
   background-color: @menu_background_color;
   .repeated-background(@menu_background_url);
