--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -134,6 +134,20 @@ table
     }
   }
 
+  &.mini
+  {
+    td
+    {
+      width: auto;
+      height: auto;
+
+      a
+      {
+        display: block;
+      }
+    }
+  }
+
   &.columns
   {
     > tbody > tr
@@ -803,7 +817,7 @@ div.sixteen
   cursor: pointer;
 }
 
-ul.menu
+.menu
 {
   position: relative;
   z-index: 100;
@@ -848,6 +862,11 @@ ul.menu
     max-width: @menu_max_width;
     white-space: normal;
     line-height: @compressed_text_flow_line_height;
+  }
+
+  .calendar-menu-item
+  {
+    margin: @standard_spacing;
   }
 }
 
@@ -1602,6 +1621,7 @@ hr
 .column-set
 {
   display: table;
+  width: 100%;
 }
 
 .column-set-column
