--- a/site/resources/styles/themes/blue_tan.css
+++ b/site/resources/styles/themes/blue_tan.css
@@ -258,23 +258,23 @@ div.info-box-top {
 .quote-block {
   color: #6f6f91;
 }
-ul.menu {
+.menu {
   background-color: #f0f0f0;
   border-color: #cccccc;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #e8e8e8;
   border-color: #cccccc;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #ffffff;
   border-color: #cccccc;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #595980;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #595980;
 }
 .button,
