--- a/site/resources/styles/themes/eggplant.css
+++ b/site/resources/styles/themes/eggplant.css
@@ -249,23 +249,23 @@ div.info-box-top {
 .quote-block {
   color: #b8ada2;
 }
-ul.menu {
+.menu {
   background-color: #422842;
   border-color: #836b79;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #382238;
   border-color: #836b79;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #5f395f;
   border-color: #836b79;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #c8bfae;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #c8bfae;
 }
 .button,
