--- a/site/resources/styles/themes/emerald.css
+++ b/site/resources/styles/themes/emerald.css
@@ -249,23 +249,23 @@ div.info-box-top {
 .quote-block {
   color: #2c3e2a;
 }
-ul.menu {
+.menu {
   background-color: #6da566;
   border-color: #597b55;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #649e5d;
   border-color: #597b55;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #88b683;
   border-color: #597b55;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #202c1e;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #202c1e;
 }
 .button,
