--- a/site/resources/styles/themes/fog.css
+++ b/site/resources/styles/themes/fog.css
@@ -258,23 +258,23 @@ div.info-box-top {
 .quote-block {
   color: #747474;
 }
-ul.menu {
+.menu {
   background-color: #dfdfdf;
   border-color: #b6b6b6;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #d7d7d7;
   border-color: #b6b6b6;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #f6f6f6;
   border-color: #b6b6b6;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #626262;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #626262;
 }
 .button,
