--- a/site/resources/styles/themes/halloween.css
+++ b/site/resources/styles/themes/halloween.css
@@ -249,23 +249,23 @@ div.info-box-top {
 .quote-block {
   color: #cccccc;
 }
-ul.menu {
+.menu {
   background-color: #141414;
   border-color: #666666;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #1f1f1f;
   border-color: #666666;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #262626;
   border-color: #666666;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #bfbfbf;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #bfbfbf;
 }
 .button,
