--- a/site/resources/styles/themes/hochzeit.css
+++ b/site/resources/styles/themes/hochzeit.css
@@ -272,29 +272,29 @@ div.info-box-top {
 .quote-block {
   color: #908371;
 }
-ul.menu {
+.menu {
   background-color: #fbf0c9;
   background-image: url('hochzeit/milkweed_paper.jpg');
   background-repeat: repeat;
   border-color: #cbc2b0;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #faedba;
   background-image: url('hochzeit/fossil_paper_light.jpg');
   background-repeat: repeat;
   border-color: #cbc2b0;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #fefcf3;
   background-image: url('hochzeit/milkweed_paper.jpg');
   background-repeat: repeat;
   border-color: #cbc2b0;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #554433;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #554433;
 }
 .button,
