--- a/site/resources/styles/themes/osx_panther.css
+++ b/site/resources/styles/themes/osx_panther.css
@@ -249,23 +249,23 @@ div.info-box-top {
 .quote-block {
   color: #5e5e5e;
 }
-ul.menu {
+.menu {
   background-color: #bdbdbd;
   border-color: #999999;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #b5b5b5;
   border-color: #999999;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #d4d4d4;
   border-color: #999999;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #4d4d4d;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #4d4d4d;
 }
 .button,
