--- a/site/resources/styles/themes/sea.css
+++ b/site/resources/styles/themes/sea.css
@@ -249,23 +249,23 @@ div.info-box-top {
 .quote-block {
   color: #9eaabe;
 }
-ul.menu {
+.menu {
   background-color: #223d6c;
   border-color: #5f769e;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #1e3660;
   border-color: #5f769e;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #2d518f;
   border-color: #5f769e;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #b0b8c7;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #b0b8c7;
 }
 .button,
