--- a/site/resources/styles/themes/slate.css
+++ b/site/resources/styles/themes/slate.css
@@ -249,23 +249,23 @@ div.info-box-top {
 .quote-block {
   color: #8f8f8f;
 }
-ul.menu {
+.menu {
   background-color: #242424;
   border-color: #5d5d5d;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #1c1c1c;
   border-color: #5d5d5d;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #3b3b3b;
   border-color: #5d5d5d;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #9d9d9d;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #9d9d9d;
 }
 .button,
