--- a/site/resources/styles/themes/steel.css
+++ b/site/resources/styles/themes/steel.css
@@ -249,23 +249,23 @@ div.info-box-top {
 .quote-block {
   color: #363d47;
 }
-ul.menu {
+.menu {
   background-color: #869ebf;
   border-color: #6c7a8d;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #7c96ba;
   border-color: #6c7a8d;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #a4b6cf;
   border-color: #6c7a8d;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #272c33;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #272c33;
 }
 .button,
