--- a/site/resources/styles/themes/sunshine.css
+++ b/site/resources/styles/themes/sunshine.css
@@ -249,23 +249,23 @@ div.info-box-top {
 .quote-block {
   color: #6d6f56;
 }
-ul.menu {
+.menu {
   background-color: #f5ff97;
   border-color: #b8bd8a;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #f4ff88;
   border-color: #b8bd8a;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #f9ffc5;
   border-color: #b8bd8a;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #585947;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #585947;
 }
 .button,
