--- a/site/resources/styles/themes/tangerine.css
+++ b/site/resources/styles/themes/tangerine.css
@@ -249,23 +249,23 @@ div.info-box-top {
 .quote-block {
   color: #7a7263;
 }
-ul.menu {
+.menu {
   background-color: #ffda9e;
   border-color: #c2b094;
 }
-ul.menu .menu-group-title {
+.menu .menu-group-title {
   background-color: #ffd58f;
   border-color: #c2b094;
 }
-ul.menu .menu-item:hover {
+.menu .menu-item:hover {
   background-color: #ffeccc;
   border-color: #c2b094;
 }
-ul.menu .menu-item:link,
-ul.menu .menu-item:visited {
+.menu .menu-item:link,
+.menu .menu-item:visited {
   color: #666056;
 }
-ul.menu .menu-item-description {
+.menu .menu-item-description {
   color: #666056;
 }
 .button,
