Add styles for H2 elements combined with background icons
These styles will be used by the main site page for the application headings.

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -475,6 +475,10 @@ pre > code .reserved {
 div.icon {
   display: block;
 }
+h2.icon {
+  display: block;
+  background-position: right;
+}
 .one-hundred {
   min-width: 100px;
   min-height: 100px;
