--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -723,6 +723,12 @@ div.icon
   display: block;
 }
 
+h2.icon
+{
+  display: block;
+  background-position: right;
+}
+
 .one-hundred
 {
   min-width: 100px;
