--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -1204,6 +1204,10 @@ hr {
   width: 20%;
 }
 .viewport {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
   display: flex;
   height: 100%;
 }
@@ -1211,29 +1215,65 @@ hr {
 .viewport .style-controls,
 .viewport .page,
 .viewport .main-box {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
   display: flex;
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
   flex: 1;
 }
 .viewport .page {
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 .viewport .page-body {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
   display: flex;
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
   flex: 1;
 }
 .viewport .page-body .column-set {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
   display: flex;
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
   flex: 1;
 }
 .viewport .page-body .column-set .left-sidebar-column {
   overflow: auto;
+  padding-right: 0;
+  margin-right: 15px;
 }
 .viewport .page-body .column-set .content-column {
-  margin-left: -15px;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
   display: flex;
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
   flex: 1;
+  margin-left: -15px;
 }
 .viewport .page-body .column-set .content-column iframe {
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
   flex: 1;
 }
 .style-controls input[type="radio"],
