Fix rendering of labels with descriptions fo Blink-based browsers

--- a/site/resources/styles/core/form-core.less
+++ b/site/resources/styles/core/form-core.less
@@ -202,7 +202,7 @@
       .description
       {
         display: block;
-        margin-left: @standard_spacing + @small_spacing;
+        margin-left: @standard_spacing + @small_spacing + 2;  // magic number based on width of radio button
         margin-bottom: 0;
       }
     }
