Add code-highlighting support to CSS/LESS

--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -69,6 +69,14 @@
 @code_border_color: @standard_border_color;
 
 @code_text_color: @text_color;
+@code_comment_color: @dimmer_text_color;
+@code_symbol_color: @code_text_color;
+@code_keyword_color: @highlighted_text_color;
+@code_tag_color: @code_keyword_color;
+@code_tag_name_color: saturate(@code_tag_color, 20%);
+@code_attribute_name_color: darken(@code_tag_color, 10%);
+@code_attribute_value_color: mix(@code_attribute_name_color, @standard_border_color, 30%);
+
 @highlighted_text_color: green;
 @selected_text_color: @text_color;
 
