--- a/site/resources/styles/themes/theme-base.less
+++ b/site/resources/styles/themes/theme-base.less
@@ -9,9 +9,45 @@ body
   color: @text_color;
 }
 
-code
+code,
+.source
 {
   color: @code_text_color;
+
+  .comment
+  {
+    color: @code_comment_color;
+  }
+
+  .symbol
+  {
+    color: @code_symbol_color;
+  }
+
+  .keyword
+  {
+    color: @code_keyword_color;
+  }
+
+  .tag-name
+  {
+    color: @code_tag_name_color;
+  }
+
+  .tag
+  {
+    color: @code_tag_color;
+  }
+
+  .attribute-name
+  {
+    color: @code_attribute_name_color;
+  }
+
+  .attribute-value
+  {
+    color: @code_attribute_value_color;
+  }
 }
 
 pre > code
