--- a/site/resources/styles/themes/blue_tan.css
+++ b/site/resources/styles/themes/blue_tan.css
@@ -74,8 +74,37 @@ body {
   background-color: #ffffff;
   color: #222255;
 }
-code {
+code,
+.source {
   color: #222255;
+}
+code .comment,
+.source .comment {
+  color: #6f6f91;
+}
+code .symbol,
+.source .symbol {
+  color: #222255;
+}
+code .keyword,
+.source .keyword {
+  color: #00aa00;
+}
+code .tag-name,
+.source .tag-name {
+  color: #00aa00;
+}
+code .tag,
+.source .tag {
+  color: #00aa00;
+}
+code .attribute-name,
+.source .attribute-name {
+  color: #007700;
+}
+code .attribute-value,
+.source .attribute-value {
+  color: #8fb28f;
 }
 pre > code {
   border-color: #cccccc;
