--- a/site/resources/styles/themes/eggplant.css
+++ b/site/resources/styles/themes/eggplant.css
@@ -74,8 +74,37 @@ body {
   background-color: #553355;
   color: #eeeecc;
 }
-code {
+code,
+.source {
   color: #eeeecc;
+}
+code .comment,
+.source .comment {
+  color: #b8ada2;
+}
+code .symbol,
+.source .symbol {
+  color: #eeeecc;
+}
+code .keyword,
+.source .keyword {
+  color: #88cc88;
+}
+code .tag-name,
+.source .tag-name {
+  color: #77dd77;
+}
+code .tag,
+.source .tag {
+  color: #88cc88;
+}
+code .attribute-name,
+.source .attribute-name {
+  color: #64bd64;
+}
+code .attribute-value,
+.source .attribute-value {
+  color: #7a8473;
 }
 pre > code {
   border-color: #836b79;
