--- a/site/resources/styles/themes/fog.css
+++ b/site/resources/styles/themes/fog.css
@@ -74,8 +74,37 @@ body {
   background-color: #eeeeee;
   color: #333333;
 }
-code {
+code,
+.source {
   color: #333333;
+}
+code .comment,
+.source .comment {
+  color: #747474;
+}
+code .symbol,
+.source .symbol {
+  color: #333333;
+}
+code .keyword,
+.source .keyword {
+  color: #00aa00;
+}
+code .tag-name,
+.source .tag-name {
+  color: #00aa00;
+}
+code .tag,
+.source .tag {
+  color: #00aa00;
+}
+code .attribute-name,
+.source .attribute-name {
+  color: #007700;
+}
+code .attribute-value,
+.source .attribute-value {
+  color: #7fa37f;
 }
 pre > code {
   border-color: #b6b6b6;
