--- a/site/resources/styles/themes/ice.css
+++ b/site/resources/styles/themes/ice.css
@@ -74,8 +74,37 @@ body {
   background-color: #ffffff;
   color: #333333;
 }
-code {
+code,
+.source {
   color: #333333;
+}
+code .comment,
+.source .comment {
+  color: #7a7a7a;
+}
+code .symbol,
+.source .symbol {
+  color: #333333;
+}
+code .keyword,
+.source .keyword {
+  color: #00aa00;
+}
+code .tag-name,
+.source .tag-name {
+  color: #00aa00;
+}
+code .tag,
+.source .tag {
+  color: #00aa00;
+}
+code .attribute-name,
+.source .attribute-name {
+  color: #007700;
+}
+code .attribute-value,
+.source .attribute-value {
+  color: #619b8d;
 }
 pre > code {
   border-color: #8aabca;
