--- a/site/resources/styles/themes/mocha.css
+++ b/site/resources/styles/themes/mocha.css
@@ -74,8 +74,37 @@ body {
   background-color: #544332;
   color: #ddd9d6;
 }
-code {
+code,
+.source {
   color: #ddd9d6;
+}
+code .comment,
+.source .comment {
+  color: #ada59d;
+}
+code .symbol,
+.source .symbol {
+  color: #ddd9d6;
+}
+code .keyword,
+.source .keyword {
+  color: #b1c22d;
+}
+code .tag-name,
+.source .tag-name {
+  color: #c3da15;
+}
+code .tag,
+.source .tag {
+  color: #b1c22d;
+}
+code .attribute-name,
+.source .attribute-name {
+  color: #8b9923;
+}
+code .attribute-value,
+.source .attribute-value {
+  color: #817c50;
 }
 pre > code {
   border-color: #7d7063;
