--- a/site/resources/styles/themes/osx.css
+++ b/site/resources/styles/themes/osx.css
@@ -74,8 +74,37 @@ body {
   background-color: #f8f8f8;
   color: #222222;
 }
-code {
+code,
+.source {
   color: #222222;
+}
+code .comment,
+.source .comment {
+  color: #6d6d6d;
+}
+code .symbol,
+.source .symbol {
+  color: #222222;
+}
+code .keyword,
+.source .keyword {
+  color: #00aa00;
+}
+code .tag-name,
+.source .tag-name {
+  color: #00aa00;
+}
+code .tag,
+.source .tag {
+  color: #00aa00;
+}
+code .attribute-name,
+.source .attribute-name {
+  color: #007700;
+}
+code .attribute-value,
+.source .attribute-value {
+  color: #81a481;
 }
 pre > code {
   border-color: #b8b8b8;
