--- a/site/resources/styles/themes/osx_panther.css
+++ b/site/resources/styles/themes/osx_panther.css
@@ -74,8 +74,37 @@ body {
   background-color: #cccccc;
   color: #222222;
 }
-code {
+code,
+.source {
   color: #222222;
+}
+code .comment,
+.source .comment {
+  color: #5e5e5e;
+}
+code .symbol,
+.source .symbol {
+  color: #222222;
+}
+code .keyword,
+.source .keyword {
+  color: #c8f39c;
+}
+code .tag-name,
+.source .tag-name {
+  color: #c8fe91;
+}
+code .tag,
+.source .tag {
+  color: #c8f39c;
+}
+code .attribute-name,
+.source .attribute-name {
+  color: #afed6f;
+}
+code .attribute-value,
+.source .attribute-value {
+  color: #a0b28c;
 }
 pre > code {
   border-color: #999999;
