--- a/site/resources/styles/themes/slate.css
+++ b/site/resources/styles/themes/slate.css
@@ -74,8 +74,37 @@ body {
   background-color: #333333;
   color: #c0c0c0;
 }
-code {
+code,
+.source {
   color: #c0c0c0;
+}
+code .comment,
+.source .comment {
+  color: #8f8f8f;
+}
+code .symbol,
+.source .symbol {
+  color: #c0c0c0;
+}
+code .keyword,
+.source .keyword {
+  color: #53a131;
+}
+code .tag-name,
+.source .tag-name {
+  color: #4bb61c;
+}
+code .tag,
+.source .tag {
+  color: #53a131;
+}
+code .attribute-name,
+.source .attribute-name {
+  color: #3f7a25;
+}
+code .attribute-value,
+.source .attribute-value {
+  color: #54664c;
 }
 pre > code {
   border-color: #5d5d5d;
