--- a/site/resources/styles/themes/steel.css
+++ b/site/resources/styles/themes/steel.css
@@ -74,8 +74,37 @@ body {
   background-color: #9aaeca;
   color: #000000;
 }
-code {
+code,
+.source {
   color: #000000;
+}
+code .comment,
+.source .comment {
+  color: #363d47;
+}
+code .symbol,
+.source .symbol {
+  color: #000000;
+}
+code .keyword,
+.source .keyword {
+  color: #137a26;
+}
+code .tag-name,
+.source .tag-name {
+  color: #05881d;
+}
+code .tag,
+.source .tag {
+  color: #137a26;
+}
+code .attribute-name,
+.source .attribute-name {
+  color: #0c4e18;
+}
+code .attribute-value,
+.source .attribute-value {
+  color: #4f6d6a;
 }
 pre > code {
   border-color: #6c7a8d;
