--- a/site/resources/styles/themes/tan.css
+++ b/site/resources/styles/themes/tan.css
@@ -74,8 +74,37 @@ body {
   background-color: #e6e8bd;
   color: #544f40;
 }
-code {
+code,
+.source {
   color: #544f40;
+}
+code .comment,
+.source .comment {
+  color: #87856c;
+}
+code .symbol,
+.source .symbol {
+  color: #544f40;
+}
+code .keyword,
+.source .keyword {
+  color: #00aa00;
+}
+code .tag-name,
+.source .tag-name {
+  color: #00aa00;
+}
+code .tag,
+.source .tag {
+  color: #00aa00;
+}
+code .attribute-name,
+.source .attribute-name {
+  color: #007700;
+}
+code .attribute-value,
+.source .attribute-value {
+  color: #82a66a;
 }
 pre > code {
   border-color: #baba97;
