Change all browsers to drop-down menus
Issues:
- Fix the user and group browsers to use a DIV chooser rather than a separate window
  <http://earthli.com/projects/view_job.php?id=2172>

--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -1011,6 +1011,12 @@ div.sixteen
   background-color: @menu_background_color;
   .repeated-background(@menu_background_url);
 
+  &.chooser
+  {
+    max-height: 500px;
+    overflow: auto;
+  }
+
   > li
   {
     padding: 0;
