--- a/site/resources/styles/themes/crimson.css
+++ b/site/resources/styles/themes/crimson.css
@@ -707,6 +707,10 @@ div.sixteen {
   border: 1px solid #b56968;
   background-color: #852927;
 }
+.menu.chooser {
+  max-height: 500px;
+  overflow: auto;
+}
 .menu > li {
   padding: 0;
   min-height: 18px;
