--- a/site/resources/styles/themes/fog.css
+++ b/site/resources/styles/themes/fog.css
@@ -716,6 +716,10 @@ div.sixteen {
   border: 1px solid #b6b6b6;
   background-color: #dfdfdf;
 }
+.menu.chooser {
+  max-height: 500px;
+  overflow: auto;
+}
 .menu > li {
   padding: 0;
   min-height: 18px;
