--- a/site/resources/styles/themes/mocha.css
+++ b/site/resources/styles/themes/mocha.css
@@ -707,6 +707,10 @@ div.sixteen {
   border: 1px solid #7d7063;
   background-color: #413427;
 }
+.menu.chooser {
+  max-height: 500px;
+  overflow: auto;
+}
 .menu > li {
   padding: 0;
   min-height: 18px;
