--- a/site/resources/styles/themes/osx_panther.css
+++ b/site/resources/styles/themes/osx_panther.css
@@ -713,6 +713,10 @@ div.sixteen {
   background-image: url('osx/os_x_app_background.png');
   background-repeat: repeat;
 }
+.menu.chooser {
+  max-height: 500px;
+  overflow: auto;
+}
 .menu > li {
   padding: 0;
   min-height: 18px;
