--- a/site/resources/styles/themes/sea.css
+++ b/site/resources/styles/themes/sea.css
@@ -707,6 +707,10 @@ div.sixteen {
   border: 1px solid #5f769e;
   background-color: #223d6c;
 }
+.menu.chooser {
+  max-height: 500px;
+  overflow: auto;
+}
 .menu > li {
   padding: 0;
   min-height: 18px;
