--- a/site/resources/styles/themes/slate.css
+++ b/site/resources/styles/themes/slate.css
@@ -707,6 +707,10 @@ div.sixteen {
   border: 1px solid #5d5d5d;
   background-color: #242424;
 }
+.menu.chooser {
+  max-height: 500px;
+  overflow: auto;
+}
 .menu > li {
   padding: 0;
   min-height: 18px;
