--- a/site/resources/styles/themes/standard.css
+++ b/site/resources/styles/themes/standard.css
@@ -707,6 +707,10 @@ div.sixteen {
   border: 1px solid #c2c2c2;
   background-color: #f0f0f0;
 }
+.menu.chooser {
+  max-height: 500px;
+  overflow: auto;
+}
 .menu > li {
   padding: 0;
   min-height: 18px;
