--- a/site/resources/styles/themes/tangerine.css
+++ b/site/resources/styles/themes/tangerine.css
@@ -707,6 +707,10 @@ div.sixteen {
   border: 1px solid #c2b094;
   background-color: #ffda9e;
 }
+.menu.chooser {
+  max-height: 500px;
+  overflow: auto;
+}
 .menu > li {
   padding: 0;
   min-height: 18px;
